welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: Unit does not take parameters
	    growFlowers();
                       ^FlowerPot:40: error: not found: value setCouleutBrosse
  setCouleutBrosse(Color.yellow)
  ^